--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         <tr>
             <td>1.</td>
             <td>HTML5</td>
-            <td class="img"><img src="/img/html5-logo.png" alt="HTML"></td>
+            <td class="img"><img src="img/html5-logo.png" alt="HTML"></td>
         </tr>
         <tr>
             <td>2.</td>
             <td>CSS3</td>
-            <td class="img"><img src="/img/css-logo.png" alt="CSS"></td>
+            <td class="img"><img src="img/css-logo.png" alt="CSS"></td>
         </tr>
         <tr>
             <td>3.</td>
             <td>JavaScript</td>
-            <td class="img"><img src="/img/javascript-logo.png" alt="JS"></td>
+            <td class="img"><img src="img/javascript-logo.png" alt="JS"></td>
         </tr>
     </table>
     <br>
